fix(article): disallow columns to overflow container (#46)

--- a/src/article-page/article-page.scss
+++ b/src/article-page/article-page.scss
@@ -70,6 +70,8 @@
 }
 
 .article {
+  min-width: 0;
+
   &__top {
     padding: 2rem 2rem 1rem;
   }
